src/app/home/home.component.scss
@import "src/variables.scss";

@function vh($quantity) {
  @return calc(var(--vh, 1vh) * #{$quantity});
}

main {
  position: relative;
  height: 100vh; //fallback
  height: calc(vh(100) - 55px);
}

.help-container{
  display: flex;
  justify-content: flex-end;
  align-items: center;
  color: $secondary-font-color;
  padding-right: 20px;
  margin-top: 30px;
}

.help-container img {
  width:  15px;
  height: 15px;
  margin-bottom: 5px;
}

.help-container div img {
  width:  20px;
  height: 20px;
  margin-bottom: 5px;
}

.help-container div:last-child {
  margin-left: 20px;
}

.help-container div {
  align-items: center;
}
.help-container  {
  color: $secondary-font-color;
  margin-left: 17px;
  align-items: center;
}

.home {
  width: 100vw;
  display: flex;
  flex-direction: column;
}

h1 {
  color: $secondary-font-color;
  font-size: 3.4rem;
  margin: 0px 20px 10px;
}

.account-container {
  height: 412px;
  display: flex;
  flex-direction: column;
  background: $natural-person-gradient;
}

.card-container {
  display: flex;
  align-items: center;
  justify-content: center;
}

.card-container img {
  width: 25px;
}

.show, .favorite, .share{
  align-items: center;
}

.show span, .favorite span, .share span{
  font-size: 1.2rem;
}

.favorite{
  margin-bottom: 15px;
}

.card {
  width: 345px;
  height: 234px;
  background: $secondary-bg-color;
  box-shadow: 0px 3px 30px #0000002f;
  border-radius: 10px;
}

.card-body {
  padding: 20px;
}

.card-account {
  font-size: 2rem;
  margin-bottom: 5px;
}

.card-name {
  font-size: 1.4rem;
  margin-bottom: 5px;
}

.card-amount,
.card-amount strong {
  font-size: 2.6rem;
  margin-bottom: 5px;
}

.card-detail,
.see-all {
  color: $primary-color;
  font-size: 1.6rem;
}

.card-iban {
  color: $tertiary-font-color;
  font-size: 1.6rem;
}

.iban-container {
  border-top: 1px solid #CCCCCC;
  padding: 20px;
  align-items: center;
}

.iban-container img {
  width: 16px;
  height: 20px;
}

.card-footer {
  height: 49px;
  background: transparent linear-gradient(279deg, #E2F3DB 0%, #E5F4FA 100%) 0% 0% no-repeat padding-box;
  display: flex;
  justify-content: space-between;
  padding: 15px 20px;
  border-radius: 0 0 10px 10px;
}

.card-footer span {
  color: $primary-font-color;
  font-size: 1.6rem;
  text-transform: capitalize;
  opacity: 1;
  z-index: 1;
}

.card-footer span:nth-child(2) {
  font-weight: 700;
}

.operations-container {
  background: $secondary-bg-color;
  padding-top: 30px;
}

h2 {
  font-weight: 700;
  font-size: 2rem;
  margin-bottom: 9px;
}

.operations-row {
  height: 82px;
  align-items: center;
  padding: 20px;
  border-top: 1px solid #CCCCCC;
}

.operations-body {
  height: calc(100vh - 527px);
  overflow-y: scroll;
}

.operations-header {
  padding: 0 20px;
}

.operations-row {
  background-color: $secondary-bg-color;
}

.operations-icon {
  width: 45px;
  height: 45px;
}

.operation-description {
  width: 195px;
  margin: 0 15px;
}

.operation-date {
  font-weight: 700;
  font-size: 1.2rem;
}

.operation-detail {
  font-size: 1.4rem;
}

.operation-amount span:first-child,
.operation-amount>span>b {
  font-size: 1.6rem;
  color: $primary-color;
}

.bottom-bar {
  width: 100vw;
  height: 55px;
  background: $secondary-bg-color;
  box-shadow: 0px 0px 8px #CCCCCC;
  padding: 8px 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
}

.bottom-bar img {
  width: 25px;
  height: 25px;
  margin-bottom: 5px;
}

.bottom-bar ul {
  width: 100vw;
  align-items: center;
  justify-content: space-between;
}

.bottom-bar .column {
  align-items: center;
}

.fab {
  position: absolute;
  right: 20px;
  bottom: 20px;
  background: $primary-color;
  border-radius: 25px;
  width: fit-content;
  height: 50px;
  padding: 0px 10px 0px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.dot-logo {
  width: 45px;
}
.fab {
  font-size: 1.4rem;
}

.fab:hover,
.fab:focus {
  background: $primary-color $natural-person-gradient;
}

#dot-img {
  width: 25px;
}

.operation-account {
  display: flex;
  justify-content: flex-start;
  margin-top: 10px;
}

.operation-account img {
  margin-right: 10px;
}

.operation-account span {
  font-size: 1.2rem;
}

section.help-container > a:hover,section.help-container > a:focus  {
  font-weight: 700;
}

@media (min-width: 769px) {
  main{
    height: 100%;
  }
  .screen {
    width: 355px;
    border-radius: 30px;
    overflow-y: auto;
    position: relative;
  }

  .home,
  .bottom-bar {
    width: 355px;
  }

  h1 {
    margin: 0px 0px 10px;
  }

  .help-container {
    padding-right: 0px;
  }

  .account-container {
    padding: 0 10px;
  }

  .operations-body {
    height: 167px;
  }

  .bottom-bar {
    position: relative;
  }
}

